hphp/hack/test/typecheck/shape_usage_with_optional_field.php
<?hh // strict

$x = shape(
  ?'a' => 42
);
